# rest_rpg/src/main/java/com/michael1099/rest_rpg/enemy/EnemyController.java
@@ -8,8 +8,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.List;
-
 @RestController
 @RequiredArgsConstructor
 @Validated
@@ -20,15 +18,5 @@ public class EnemyController implements EnemyApi {
     @Override
     public ResponseEntity<EnemyLite> createEnemy(EnemyCreateRequest enemyCreateRequest) {
         return ResponseEntity.ok(enemyService.createEnemy(enemyCreateRequest));
-    }
-
-    @Override
-    public ResponseEntity<List<String>> getStrategyActionsEnum() {
-        return ResponseEntity.ok(enemyService.getStrategyActionsEnum());
-    }
-
-    @Override
-    public ResponseEntity<List<String>> getStrategyEventsEnum() {
-        return ResponseEntity.ok(enemyService.getStrategyEventsEnum());
     }
 }
