# rest_rpg/src/main/java/com/michael1099/rest_rpg/skill/SkillController.java
@@ -2,8 +2,12 @@ package com.michael1099.rest_rpg.skill;
 
 import lombok.RequiredArgsConstructor;
 import org.openapitools.api.SkillApi;
+import org.openapitools.model.SkillBasic;
 import org.openapitools.model.SkillCreateRequest;
+import org.openapitools.model.SkillDetails;
 import org.openapitools.model.SkillLite;
+import org.openapitools.model.SkillSearchRequest;
+import org.springframework.data.domain.Page;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.RestController;
@@ -18,5 +22,15 @@ public class SkillController implements SkillApi {
     @Override
     public ResponseEntity<SkillLite> createSkill(SkillCreateRequest skillCreateRequest) {
         return ResponseEntity.ok(skillService.createSkill(skillCreateRequest));
+    }
+
+    @Override
+    public ResponseEntity<Page<SkillBasic>> findSkills(SkillSearchRequest skillSearchRequest) {
+        return ResponseEntity.ok(skillService.findSkills(skillSearchRequest));
+    }
+
+    @Override
+    public ResponseEntity<SkillDetails> getSkill(Long skillId) {
+        return ResponseEntity.ok(skillService.getSkill(skillId));
     }
 }
