# rest_rpg/src/main/java/com/michael1099/rest_rpg/skill/model/Skill.java
@@ -3,11 +3,23 @@ package com.michael1099.rest_rpg.skill.model;
 import com.michael1099.rest_rpg.character_skill.CharacterSkill;
 import com.michael1099.rest_rpg.enemy.model.Enemy;
 import jakarta.annotation.Nullable;
-import jakarta.persistence.*;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.OneToMany;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
-import lombok.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 import org.openapitools.model.CharacterClass;
 import org.openapitools.model.SkillEffect;
 import org.openapitools.model.SkillType;
@@ -31,11 +43,16 @@ public class Skill {
     @NotBlank
     private String name;
 
+    private int manaCost;
+
     @NotNull
     @Enumerated(EnumType.STRING)
     private SkillType type;
 
     private float multiplier;
+
+    @Nullable
+    private Float multiplierPerLevel;
 
     @Nullable
     @Enumerated(EnumType.STRING)
@@ -45,7 +62,13 @@ public class Skill {
     private Integer effectDuration;
 
     @Nullable
+    private Integer effectDurationPerLevel;
+
+    @Nullable
     private Float effectMultiplier;
+
+    @Nullable
+    private Float effectMultiplierPerLevel;
 
     @NotNull
     @Enumerated(EnumType.STRING)
@@ -62,11 +85,15 @@ public class Skill {
     public static Skill of(@Valid SkillCreateRequestDto dto) {
         return builder()
                 .name(dto.getName())
+                .manaCost(dto.getManaCost())
                 .type(dto.getType())
                 .multiplier(dto.getMultiplier())
+                .multiplierPerLevel(dto.getMultiplierPerLevel())
                 .effect(dto.getEffect())
                 .effectDuration(dto.getEffectDuration())
+                .effectDurationPerLevel(dto.getEffectDurationPerLevel())
                 .effectMultiplier(dto.getEffectMultiplier())
+                .effectMultiplierPerLevel(dto.getEffectMultiplierPerLevel())
                 .characterClass(dto.getCharacterClass())
                 .build();
     }
