# rest_rpg/src/main/resources/api.yml
@@ -161,34 +161,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/EnemyLite'
-  /enemy/strategy-event:
-    get:
-      summary: Get enum strategy events
-      operationId: getStrategyEventsEnum
-      x-preauth: "hasAuthority('ADMIN')"
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
-  /enemy/strategy-actions:
-    get:
-      summary: Get enum strategy actions
-      operationId: getStrategyActionsEnum
-      x-preauth: "hasAuthority('ADMIN')"
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
   /skill:
     post:
       summary: Creates new skill.
@@ -207,6 +179,46 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/SkillLite'
+  #Both
+  /skill/search:
+    post:
+      summary: Search skills.
+      operationId: findSkills
+      x-preauth: "hasAnyAuthority('ADMIN', 'USER')"
+      x-deleteResponseAnnotation: true
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SkillSearchRequest'
+      responses:
+        '200':
+          description: Info about found skills
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SkillBasicPage'
+  /skill/{skillId}:
+    get:
+      summary: Get skill by skill id
+      operationId: getSkill
+      x-preauth: "hasAnyAuthority('ADMIN', 'USER')"
+      parameters:
+        - name: skillId
+          in: path
+          required: true
+          description: Skill id
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Info about created skill
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SkillDetails'
 components:
   schemas:
     ErrorCodes:
@@ -569,6 +581,7 @@ components:
       type: object
       required:
         - name
+        - manaCost
         - type
         - multiplier
         - characterClass
@@ -576,11 +589,18 @@ components:
         name:
           description: Skill name
           type: string
+        manaCost:
+          description: Skill mana cost
+          type: integer
         type:
           description: Skill type
           type: string
         multiplier:
           description: Skill multiplier for example totalDamage = normalDamage * multiplier
+          type: number
+          format: float
+        multiplierPerLevel:
+          description: Multiplier to add per level
           type: number
           format: float
         effect:
@@ -589,8 +609,15 @@ components:
         effectDuration:
           description: Skill effect duration in turns
           type: integer
+        effectDurationPerLevel:
+          description: Skill effect duration to add per level
+          type: integer
         effectMultiplier:
           description: Effect multiplier for example Burning -> damagePerTurn = maxEnemyHealth * effectMultiplier
+          type: number
+          format: float
+        effectMultiplierPerLevel:
+          description: Effect multiplier to add per level
           type: number
           format: float
         characterClass:
@@ -601,9 +628,6 @@ components:
       required:
         - id
         - name
-        - type
-        - multiplier
-        - characterClass
       properties:
         id:
           description: Skill id
@@ -612,23 +636,121 @@ components:
         name:
           description: Skill name
           type: string
-        type:
-          description: Skill type
-          type: string
-        multiplier:
-          description: Skill multiplier for example totalDamage = normalDamage * multiplier
-          type: number
-          format: float
-        effect:
-          description: Skill effect
-          type: string
-        effectDuration:
-          description: Skill effect duration in turns
+    Page:
+      type: object
+      description: Page info
+      properties:
+        number:
           type: integer
-        effectMultiplier:
-          description: Effect multiplier for example Burning -> damagePerTurn = maxEnemyHealth * effectMultiplier
-          type: number
-          format: float
-        characterClass:
-          description: Character class skill is for
+        size:
+          type: integer
+        numberOfElements:
+          type: integer
+        totalElements:
+          type: integer
+        content:
+          type: boolean
+        first:
+          type: boolean
+        last:
+          type: boolean
+    SkillBasic:
+      allOf:
+        - $ref: '#/components/schemas/SkillLite'
+        - type: object
+          required:
+            - type
+            - multiplier
+            - characterClass
+          properties:
+            type:
+              description: Skill type
+              type: string
+            effect:
+              description: Skill effect
+              type: string
+            characterClass:
+              description: Character class skill is for
+              type: string
+    SkillBasicPage:
+      allOf:
+        - $ref: '#/components/schemas/Page'
+        - type: object
+          required:
+            - content
+          properties:
+            content:
+              type: array
+              items:
+                $ref: '#/components/schemas/SkillBasic'
+    SkillDetails:
+      allOf:
+        - $ref: '#/components/schemas/SkillBasic'
+        - type: object
+          required:
+            - multiplier
+          properties:
+            manaCost:
+              description: Skill mana cost
+              type: integer
+            multiplier:
+              description: Skill multiplier
+              type: number
+              format: float
+            multiplierPerLevel:
+              description: Multiplier to add per level
+              type: number
+              format: float
+            effectDuration:
+              description: Skill effect duration in turns
+              type: integer
+            effectMultiplier:
+              description: Effect multiplier
+              type: number
+              format: float
+            effectDurationPerLevel:
+              description: Skill effect duration to add per level
+              type: integer
+            effectMultiplierPerLevel:
+              description: Effect multiplier to add per level
+              type: number
+              format: float
+    Pagination:
+      type: object
+      description: Pagination data
+      properties:
+        pageNumber:
+          description: Page number
+          type: integer
+        elements:
+          description: Elements per page
+          type: integer
+        sort:
+          description: Sort by path
           type: string
+        sortOrder:
+          description: Sort order
+          type: string
+    SkillSearchRequest:
+      type: object
+      properties:
+        pagination:
+          $ref: '#/components/schemas/Pagination'
+        nameLike:
+          description: Skill name fragment
+          type: string
+        skillTypeIn:
+          description: Skill type in
+          type: array
+          items:
+            type: string
+        skillEffectIn:
+          description: Skill effect in
+          type: array
+          items:
+            type: string
+        characterClassIn:
+          description: Character class skill is for in
+          type: array
+          items:
+            type: string
